--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
-
+title: Enoch Adom, PhD
+#logo
+description: Postdoctoral Researcher at University of Nevada, Reno
+#show_download: true
+theme: jekyll-theme-minimal
