--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Enoch Adom, PhD
-#logo
+logo: docs/assets/adom_hood.jpeg
 description: Postdoctoral Researcher at University of Nevada, Reno
 #show_download: true
 theme: jekyll-theme-minimal
