--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Enoch Adom, PhD
 logo: docs/assets/adom_grad.jpeg
 description: Postdoctoral Researcher at University of Nevada, Reno
 #show_download: true
-theme: jekyll-theme-minimal
+theme: jekyll-theme-modernist
